--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ MANIFEST
 # uv package manager
 uv.lock
 
+# memory bank
+memory-bank/
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
